// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Function isApplication] should work properly 1`] = `
{
  "APP": true,
  "BRC": false,
  "DEV": false,
  "DIR": false,
  "FIL": false,
  "SVW": false,
  "TRK": false,
  "UTS": false,
  "VW": false,
}
`;

exports[`[Function isFile] should work properly 1`] = `
{
  "APP": false,
  "BRC": false,
  "DEV": false,
  "DIR": false,
  "FIL": true,
  "SVW": false,
  "TRK": false,
  "UTS": true,
  "VW": false,
}
`;

exports[`[Function isProject] should work properly 1`] = `
{
  "APP": false,
  "BRC": false,
  "DEV": false,
  "DIR": false,
  "FIL": false,
  "SVW": false,
  "TRK": true,
  "UTS": false,
  "VW": false,
}
`;

exports[`[Function isView] should work properly 1`] = `
{
  "APP": true,
  "BRC": false,
  "DEV": false,
  "DIR": false,
  "FIL": false,
  "SVW": true,
  "TRK": false,
  "UTS": false,
  "VW": true,
}
`;
